Fixed markdown format.
Signed-off-by: Sam Stevens <samuel.robert.stevens@gmail.com>

--- a/web/pages/docs/reference/python.mdx
+++ b/web/pages/docs/reference/python.mdx
@@ -172,7 +172,7 @@ For example:
 - `path`: The path which was saved to the repository by `keepsake.init()`, relative to `keepsake.yaml`
 - `params`: The dictionary of parameters that were defined in `keepsake.init()`
 - `python_packages`: The Python packages and their versions which where imported when the experiment started
-- `checkpoints`: A list of (Checkpoint)[#the-checkpoint-class] objects
+- `checkpoints`: A list of [Checkpoint](#the-checkpoint-class) objects
 
 ### `experiment.latest()`
 
